.provarCaches/00D5f000005vwGkEAI/objects/rstk__soapisydata_event__e.object
<CustomObject>
    <fields>
        <fullName>rstk__batchsizeoverride__c</fullName>
        <label>Batch Size Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__batchsizeunits__c</fullName>
        <label>Batch Size Units</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__concurrencykeys__c</fullName>
        <label>Concurrency Keys</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__published__c</fullName>
        <label>Published Time</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydataId__c</fullName>
        <label>System Transaction Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatatid__c</fullName>
        <label>SYDATA Transfer Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__txndetails__c</fullName>
        <label>Txn Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__txntype__c</fullName>
        <label>Txn Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SOAPI Transaction Event</label>
    <pluralLabel>SOAPI Transaction Events</pluralLabel>
</CustomObject>